# bazel-architect-v17-repro-17.0

./: .gitignore  README.md  WORKSPACE.bazel  angular.json  defs.bzl  package.json  pnpm-lock.yaml  tsconfig.json
projects/common/: ng-package.json  package.json  pnpm-lock.yaml
projects/lib-a/: ng-package.json  package.json
src/: styles.scss
src/app/: app.component.html  app.module.ts
